# Native-Android-AQUA-KOS-and-CW

./: .gitignore  .gitmodules  README PLS I BEG YOU  README.md
app/: build.gradle
app/src/androidTest/java/com/inobulles/obiwac/aqua/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: es2_vertex_shader.glsl  es3_fragment_shader.glsl  es3_vertex_shader.glsl  vert.glsl
app/src/main/assets/root/: ROM  rom.zed
app/src/main/assets/root/root/: desktop_category_entries.cge  theme.thm  widgets.wps
app/src/main/cpp/: CMakeLists.txt  alog.h  entry.cpp  es2_renderer.cpp  es3_renderer.cpp  gl.h  native-lib.cpp  native-lib.h  renderer.h  safemem.h
app/src/main/cpp/asm/: asm.h  defs.h  instructions.h  name_database.h  root.h
app/src/main/cpp/kos/: events.h  fs.h  fs_list.h  glue.c  glue.h  heap.h  misc.h  placeholders.h  predefined_textures.h  socket.h  video.h
app/src/main/cpp/kos/asm/: asm.h  kos_wrapper.h
app/src/main/cpp/kos/decoders/: bmp.h
app/src/main/cpp/kos/gl/: font.h  screenshot.h  surface.h  texture.h
app/src/main/cpp/kos/src/: kos.h
app/src/main/cpp/kos/src/android/: alog.h  native-lib.h  renderer.h  root.h  safemem.h
app/src/main/cpp/kos/src/functions/: dummy.h  font.h  screenshot.h  system.h  video.h
app/src/main/cpp/kos/src/functions/decoders/: bmp.h
app/src/main/cpp/kos/src/gl_common/: surface.h  texture.h
app/src/main/cpp/kos/src/gl_versions/framebuffer/: gl_2.h
app/src/main/cpp/kos/src/gl_versions/surface/: gl_2.h
app/src/main/cpp/kos/src/macros_and_inclusions/: macros.h
app/src/main/cpp/kos/src/socket/: socket.h
app/src/main/java/com/inobulles/obiwac/aqua/: Font.java  InstanceActivity.java  Joystick.java  Lib.java  MainActivity.java  Mouse.java  Requests.java  Sound.java  TextInput.java  Utils.java  View.java  ViewThread.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: backup_rules.xml
app/src/test/java/com/inobulles/obiwac/aqua/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
